--- a/Source/Mosa.BareMetal.GraphicalWorld.x86/Mosa.BareMetal.GraphicalWorld.x86.csproj
+++ b/Source/Mosa.BareMetal.GraphicalWorld.x86/Mosa.BareMetal.GraphicalWorld.x86.csproj
@@ -1,16 +1,10 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-    <PropertyGroup>
-        <OutputType>Exe</OutputType>
-        <TargetFramework>net7.0</TargetFramework>
-		<LangVersion>11.0</LangVersion>
-		<OutputPath>..\..\bin\</OutputPath>
-		<AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
-		<DisableStandardFrameworkResolution>true</DisableStandardFrameworkResolution>
-		<DisableImplicitFrameworkReferences>true</DisableImplicitFrameworkReferences>
-		<UseAppHost>false</UseAppHost>
-		<DebugType>full</DebugType>
-    </PropertyGroup>
+	<PropertyGroup>
+		<OutputType>Exe</OutputType>
+	</PropertyGroup>
+
+	<Import Project="../Mosa.BareMetal.targets" />
 
 	<ItemGroup>
 		<ProjectReference Include="..\Mosa.BareMetal.GraphicalWorld\Mosa.BareMetal.GraphicalWorld.csproj" />
