--- a/Source/Mosa.Kernel.BareMetal/Mosa.Kernel.BareMetal.csproj
+++ b/Source/Mosa.Kernel.BareMetal/Mosa.Kernel.BareMetal.csproj
@@ -1,29 +1,15 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-  <PropertyGroup>
-    <TargetFramework>net7.0</TargetFramework>
-    <DebugType>full</DebugType>
-    <LangVersion>11.0</LangVersion>
-    <OutputPath>..\..\bin\</OutputPath>
-    <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
-    <DisableStandardFrameworkResolution>true</DisableStandardFrameworkResolution>
-    <DisableImplicitFrameworkReferences>true</DisableImplicitFrameworkReferences>
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <NoWarn>0219,0414</NoWarn>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugSymbols>True</DebugSymbols>
-    <WarningLevel>2</WarningLevel>
-  </PropertyGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Mosa.DeviceDriver\Mosa.DeviceDriver.csproj" />
-    <ProjectReference Include="..\Mosa.DeviceSystem\Mosa.DeviceSystem.csproj" />
-    <ProjectReference Include="..\Mosa.FileSystem\Mosa.FileSystem.csproj" />
-    <ProjectReference Include="..\Mosa.Runtime\Mosa.Runtime.csproj" />
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Remove="PageListNodeEntry.cs" />
-    <Compile Remove="PageNodeDoubleListEntry.cs" />
-  </ItemGroup>
+
+	<Import Project="../Mosa.BareMetal.targets" />
+
+	<ItemGroup>
+		<ProjectReference Include="..\Mosa.DeviceDriver\Mosa.DeviceDriver.csproj" />
+		<ProjectReference Include="..\Mosa.FileSystem\Mosa.FileSystem.csproj" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<Compile Remove="PageListNodeEntry.cs" />
+		<Compile Remove="PageNodeDoubleListEntry.cs" />
+	</ItemGroup>
+
 </Project>
