--- a/Source/Mosa.Runtime.x64/Mosa.Runtime.x64.csproj
+++ b/Source/Mosa.Runtime.x64/Mosa.Runtime.x64.csproj
@@ -1,16 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-	<PropertyGroup>
-		<TargetFramework>net7.0</TargetFramework>
-		<DebugType>full</DebugType>
-		<LangVersion>11.0</LangVersion>
-		<OutputPath>..\..\bin\</OutputPath>
-		<AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
-		<DisableStandardFrameworkResolution>true</DisableStandardFrameworkResolution>
-		<DisableImplicitFrameworkReferences>true</DisableImplicitFrameworkReferences>
-		<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-	</PropertyGroup>
+
+	<Import Project="../Mosa.BareMetal.targets" />
+
 	<ItemGroup>
-		<ProjectReference Include="..\Mosa.Korlib\Mosa.Korlib.csproj" />
 		<ProjectReference Include="..\Mosa.Runtime\Mosa.Runtime.csproj" />
 	</ItemGroup>
+
 </Project>
