Fix building again
Signed-off-by: AnErrupTion <anerruption@disroot.org>

--- a/Source/Mosa.UnitTests.BareMetal.x86/Mosa.UnitTests.BareMetal.x86.csproj
+++ b/Source/Mosa.UnitTests.BareMetal.x86/Mosa.UnitTests.BareMetal.x86.csproj
@@ -1,5 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
+	<PropertyGroup>
+		<OutputType>Exe</OutputType>
+	</PropertyGroup>
+
 	<Import Project="../Mosa.BareMetal.targets" />
 
 	<ItemGroup>
