--- a/Source/Mosa.Utility.Disassembler/Mosa.Utility.Disassembler.csproj
+++ b/Source/Mosa.Utility.Disassembler/Mosa.Utility.Disassembler.csproj
@@ -1,6 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
+    <PackageReference Include="Reko.Decompiler.Runtime" Version="0.11.4" />
 	  <PackageReference Include="Reko.Decompiler.Runtime" Version="0.11.3" />
   </ItemGroup>
 
