--- a/Source/Mosa.Utility.UnitTests/Mosa.Utility.UnitTests.csproj
+++ b/Source/Mosa.Utility.UnitTests/Mosa.Utility.UnitTests.csproj
@@ -83,8 +83,10 @@
 		<Compile Include="..\Mosa.UnitTests\ValueType\StructTests.cs" Link="Tests\ValueType\StructTests.cs" />
 		<Compile Include="..\Mosa.UnitTests\ValueType\ValueTypeTests.cs" Link="Tests\ValueType\ValueTypeTests.cs" />
 
-		<Compile Include="..\Mosa.UnitTests\Regression\Issue1093.cs" Link="Tests\Regression\Issue1093.cs" />
+		<Compile Include="..\Mosa.UnitTests\Optimization\Division.cs" Link="Tests\Optimization\Division.cs" />
 
+		<Compile Include="..\Mosa.UnitTests\Regression\Issue1093.cs" Link="Tests\Regression\Issue1093.cs" />
+		
 		<!--<Compile Include="..\Mosa.UnitTests\Mosa.Collections.Generic\BitFlagsTests.cs" Link="Tests\Mosa.Collections.Generic\BitFlagsTests.cs" />-->
 	</ItemGroup>
 
