- Optimization for Division by a constant - Also bug fixes

--- a/Source/Mosa.BareMetal.HelloWorld.x86/Mosa.BareMetal.HelloWorld.x86.csproj
+++ b/Source/Mosa.BareMetal.HelloWorld.x86/Mosa.BareMetal.HelloWorld.x86.csproj
@@ -9,6 +9,7 @@
 	<ItemGroup>
 		<ProjectReference Include="..\Mosa.BareMetal.HelloWorld\Mosa.BareMetal.HelloWorld.csproj" />
 		<ProjectReference Include="..\Mosa.Kernel.BareMetal.x86\Mosa.Kernel.BareMetal.x86.csproj" />
+		<ProjectReference Include="..\Mosa.UnitTests\Mosa.UnitTests.csproj" />
 	</ItemGroup>
 
 </Project>
