--- a/Source/Mosa.Compiler.x86/Mosa.Compiler.x86.csproj
+++ b/Source/Mosa.Compiler.x86/Mosa.Compiler.x86.csproj
@@ -4,4 +4,8 @@
 		<ProjectReference Include="..\Mosa.Compiler.Framework\Mosa.Compiler.Framework.csproj" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Folder Include="Transforms\Optimizations\Manual\Simplification\" />
+	</ItemGroup>
+
 </Project>
