--- a/Source/Mosa.Packages/Mosa.Tools.Package.nuspec
+++ b/Source/Mosa.Packages/Mosa.Tools.Package.nuspec
@@ -46,9 +46,8 @@
 		<file src="..\..\bin\PriorityQueue.dll" target="contentFiles/any/net7.0/Tools" />
 		<file src="..\..\bin\WinFormsUI.dll" target="contentFiles/any/net7.0/Tools" />
 		<file src="..\..\bin\WeifenLuo.WinFormsUI.Docking.ThemeVS2015.dll" target="contentFiles/any/net7.0/Tools" />
-		<file src="..\..\bin\System.Reactive.dll" target="contentFiles/any/net7.0/Tools" />
 		<file src="..\..\bin\SkiaSharp.dll" target="contentFiles/any/net7.0/Tools" />
 		<file src="..\..\bin\HarfBuzzSharp.dll" target="contentFiles/any/net7.0/Tools" />
-		<file src="..\..\bin\Tmds.DBus.dll" target="contentFiles/any/net7.0/Tools" />
+		<file src="..\..\bin\Tmds.DBus.Protocol.dll" target="contentFiles/any/net7.0/Tools" />
 	</files>
 </package>
