Update Avalonia, add unit tests and more! (#1144)
* Changes

Signed-off-by: AnErrupTion <anerruption@disroot.org>

* Update Starter.cs

Signed-off-by: AnErrupTion <anerruption@disroot.org>

* Update Avalonia projects

Signed-off-by: AnErrupTion <anerruption@disroot.org>

* Add Mosa.Compiler.Common.xUnit project to Mosa.Linux.sln

Signed-off-by: AnErrupTion <anerruption@disroot.org>

* Resolve conflicts

Signed-off-by: AnErrupTion <anerruption@disroot.org>

* Fix bug in unit test

Signed-off-by: AnErrupTion <anerruption@disroot.org>

* Update NuGet packages

Signed-off-by: AnErrupTion <anerruption@disroot.org>

---------

Signed-off-by: AnErrupTion <anerruption@disroot.org>

--- a/Source/Mosa.Tool.Bootstrap/Mosa.Tool.Bootstrap.csproj
+++ b/Source/Mosa.Tool.Bootstrap/Mosa.Tool.Bootstrap.csproj
@@ -2,19 +2,15 @@
 
 	<PropertyGroup>
 		<OutputType>WinExe</OutputType>
+		<BuiltInComInteropSupport>true</BuiltInComInteropSupport>
 		<ApplicationManifest>app.manifest</ApplicationManifest>
+		<AvaloniaUseCompiledBindingsByDefault>true</AvaloniaUseCompiledBindingsByDefault>
 	</PropertyGroup>
 
 	<ItemGroup>
-		<TrimmerRootDescriptor Include="Roots.xml" />
-	</ItemGroup>
-
-	<ItemGroup>
-		<PackageReference Include="Avalonia" Version="0.10.22" />
-		<PackageReference Include="Avalonia.Desktop" Version="0.10.22" />
-		<!--Condition below is needed to remove Avalonia.Diagnostics package from build output in Release configuration.-->
-		<PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="0.10.22" />
-		<PackageReference Include="XamlNameReferenceGenerator" Version="1.6.1" />
+		<PackageReference Include="Avalonia.Desktop" Version="11.0.4" />
+		<PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="11.0.4" />
+		<PackageReference Include="Avalonia.Themes.Fluent" Version="11.0.4" />
 	</ItemGroup>
 
 </Project>
