--- a/Source/Mosa.BareMetal.TestWorld.x86/Mosa.BareMetal.TestWorld.x86.csproj
+++ b/Source/Mosa.BareMetal.TestWorld.x86/Mosa.BareMetal.TestWorld.x86.csproj
@@ -7,8 +7,9 @@
 	<Import Project="../Mosa.BareMetal.targets" />
 
 	<ItemGroup>
-		<ProjectReference Include="..\Mosa.BareMetal.HelloWorld\Mosa.BareMetal.HelloWorld.csproj" />
+		<ProjectReference Include="..\Mosa.BareMetal.TestWorld\Mosa.BareMetal.TestWorld.csproj" />
 		<ProjectReference Include="..\Mosa.Kernel.BareMetal.x86\Mosa.Kernel.BareMetal.x86.csproj" />
+		<ProjectReference Include="..\Mosa.UnitTests\Mosa.UnitTests.csproj" />
 	</ItemGroup>
 
 </Project>
