Add Threading to BareMetal (#1162)
* - Renamed classes

* - Renamed classes

* - Added small Starter project

* - Added TestWorld project

* - WIP (Threading)

* - WIP (Threading)

* - WIP (Threading)

* - WIP (Threading)

* - WIP (Threading)

* - WIP (Threading)

* - WIP (Threading)

* - WIP (Threading)

* - WIP (Threading)

* - WIP (Threading)

* - WIP (Threading)

* - WIP (Threading)

* - WIP

* - WIP

* - WIP

* - WIP

* - WIP

* - WIP

--- a/Source/Mosa.BareMetal.Starter.86/Mosa.BareMetal.Starter.x86.csproj
+++ b/Source/Mosa.BareMetal.Starter.86/Mosa.BareMetal.Starter.x86.csproj
@@ -7,8 +7,16 @@
 	<Import Project="../Mosa.BareMetal.targets" />
 
 	<ItemGroup>
-		<ProjectReference Include="..\Mosa.BareMetal.HelloWorld\Mosa.BareMetal.HelloWorld.csproj" />
+	  <None Remove="Properties\launchSettings.json" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Content Include="Properties\launchSettings.json" />
+	</ItemGroup>
+
+	<ItemGroup>
 		<ProjectReference Include="..\Mosa.Kernel.BareMetal.x86\Mosa.Kernel.BareMetal.x86.csproj" />
+
 	</ItemGroup>
 
 </Project>
